--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,4 @@
-html,
-body,
 .container {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-  background: #f9f8f4;
-  color: black;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 14px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  justify-content: center;
-}
-
-#nameplate {
-  background: white;
-  padding: 8px;
-  margin-top: 16px;
-}
-
-.container canvas {
-  box-shadow: 2px 7px 8px 0px #ccc;
-  background: white;
-  padding: 16px;
-}
-
-.link {
-  padding: 1rem;
-  background-color: white;
-}
-
-.link:link,
-.link:visited {
-  text-decoration: none;
-}
-
-.link img {
-  width: 100%;
-}
-
-.link span {
-  margin-top: 1rem;
-}
-
-.grid {
-  max-width: 900px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 1rem;
-  margin-left: 1rem;
-}
-
-.grid-item {
-  width: 20%;
-  min-width: 200px;
-  margin-left: 1rem;
-  margin-top: 1rem;
+  border: rgba(0, 0, 0, 0.3);
+  margin: 1em;
 }
